--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
-blinker==1.4
-docutils==0.15.2
-feedgenerator==1.9
+anyio==4.3.0
+blinker==1.7.0
+docutils==0.20.1
+feedgenerator==2.1.0
 icalendar==4.0.4
-Jinja2==2.11.3
+idna==3.6
+invoke==2.2.0
+Jinja2==3.1.3
 Markdown==3.1.1
-MarkupSafe==1.1.1
-pelican==4.2.0
-Pygments==2.11.2
-python-dateutil==2.8.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ordered-set==4.1.0
+pelican==4.9.1
+Pygments==2.17.2
+python-dateutil==2.9.0.post0
 pytz==2019.3
-six==1.13.0
-Unidecode==1.1.1
+rich==13.7.1
+setuptools==69.2.0
+six==1.16.0
+sniffio==1.3.1
+Unidecode==1.3.8
+watchfiles==0.21.0
